; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___rotate_register_cb.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___rotate_register_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@register_rotate = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"dr\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__rotate_register_cb(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to i32*
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @register_rotate, align 4
  %10 = load i32, i32* @register_rotate, align 4
  %11 = call i32 @COUNT(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @__rotate_panel_cmds(i32* %8, i32 %9, i32 %11, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %12)
  ret void
}

declare dso_local i32 @__rotate_panel_cmds(i32*, i32, i32, i8*, i32) #1

declare dso_local i32 @COUNT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
